nextest-runner/src/reporter/snapshots/nextest_runner__reporter__events__tests__abort_unix_signal_no_name.snap
---
source: nextest-runner/src/reporter/events.rs
expression: json
snapshot_kind: text
---
{
  "kind": "unix-signal",
  "signal": 42,
  "name": null
}
