nextest-runner/src/reporter/snapshots/nextest_runner__reporter__events__tests__abort_windows_job_object.snap
---
source: nextest-runner/src/reporter/events.rs
expression: json
snapshot_kind: text
---
{
  "kind": "windows-job-object"
}
