nextest-runner/src/reporter/snapshots/nextest_runner__reporter__events__tests__abort_windows_nt_status_no_message.snap
---
source: nextest-runner/src/reporter/events.rs
expression: json
snapshot_kind: text
---
{
  "kind": "windows-nt-status",
  "code": -1073741819,
  "message": null
}
