nextest-runner/src/reporter/snapshots/nextest_runner__reporter__events__tests__fail_exit_code_leaked.snap
---
source: nextest-runner/src/reporter/events.rs
expression: json
snapshot_kind: text
---
{
  "status": "fail",
  "failure": {
    "kind": "exit-code",
    "code": 1
  },
  "leaked": true
}
