nextest-runner/src/reporter/snapshots/nextest_runner__reporter__events__tests__fail_unix_signal_unknown_leaked.snap
---
source: nextest-runner/src/reporter/events.rs
expression: json
snapshot_kind: text
---
{
  "status": "fail",
  "failure": {
    "kind": "abort",
    "abort": {
      "kind": "unix-signal",
      "signal": 42,
      "name": null
    }
  },
  "leaked": true
}
