nextest-runner/src/reporter/snapshots/nextest_runner__reporter__events__tests__fail_windows_job_object.snap
---
source: nextest-runner/src/reporter/events.rs
expression: json
snapshot_kind: text
---
{
  "status": "fail",
  "failure": {
    "kind": "abort",
    "abort": {
      "kind": "windows-job-object"
    }
  },
  "leaked": false
}
